--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,89 +1,103 @@
 <%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
-<div class="form-group">
-  <div class="schedule-item">
-    <div class="schedule-item-body text-center">
-      <% if @user.image.nil? %>
-        <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "100px",height: "100px" %>
-      <% else %>
-        <%= image_tag "/user_images/#{@user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "100px",height: "100px"%>
-      <% end %>
-    </div>
-  </div>
-  <div class="schedule-item">
-    <div class="schedule-item-body text-center">
-      <h2><%= @user.name %></h2>
-      <h4>(<%= @user.nickname %>)</h4>
-      <h3 class="text-center background">@<%= current_user.userid %></h3>
-    </div>
-  </div>
-
-  <div class="schedule-item">
-    <div class="schedule-item-body text-center">
-      <span>フォロー : <%= @user.followings_list.count %></span>
-      <span>フォロワー : <%= @user.followers_list.count %></span>
-    </div>
-  </div>
-
-  <div class = "schedule-item text-center">
-    <p class="m-1"><strong>学科:</strong>
-      <%= @profiles.grade %>
-    </p>
-    <p class="m-1"><strong>クラス:</strong>
-      <%=@profiles.school_class%>
-    </p>
-    <p class="m-1"><strong>出席番号:</strong>
-      <%=@profiles.number %>
-    </p>
-    <p class="m-1"><strong>学籍番号:</strong>
-      <%=@profiles.student_id%>
-    </p>
-    <p class="m-1"><strong>資格取得:</strong>
-      <%=  @profiles.accreditation %>
-    </p>
-    <p class="m-1"><strong>タグ、趣味:</strong>
-      <%= @profiles.hobby %>
-    </p>
-  </div>
-
-
-  <div class = "schedule-item text-center">
-    <% if @user.follow_request?(current_user, @user) %>
-      <p class="bold">フォローされています</p>
-    <% end %>
-    <% if current_user.matchers?(@user) %>
-      <p class="bold">友達です</p>
-    <% end %>
-  </div>
-  <div class = "schedule-item text-center">
-    <% if current_user.id != @user.id %>
-      <% unless current_user.following?(@user) %>
-        <div class="actions ">
-          <%= link_to 'フォロー',
-                      profile_relationships_path(@user.userid),
-                      method: :post,
-                      class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
-                      style: "font-size: 18px;width: 150px;color:#FFF"
-          %>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <div class="panel panel-default">
+        <div class="userprofile social ">
+          <div class="userpic">
+            <% if @user.image.nil? %>
+              <%= image_tag "default_icon", class: "userpicimg icon flex-shrink-0 show-icon",width: "150px",height: "150px" %>
+            <% else %>
+              <%= image_tag "/user_images/#{@user.image}" , class: "icon bd-placeholder-img flex-shrink-0 show-icon",width: "150px",height: "150px"%>
+            <% end %>
+          </div>
+          <h3 class="username"><%= @user.nickname %></h3>
+          <p>@<%=current_user.userid%></p>
         </div>
-      <% else %>
-        <div class="actions">
-          <%= link_to 'フォロー解除',
-                      profile_relationship_path(@user.userid),
-                      method: :delete,
-                      class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
-                      style: "font-size: 18px;width: 150px;color:#FFF"
-          %>
+        <div class="col-md-12 border-top border-bottom">
+          <ul class="nav nav-pills pull-left countlist" role="tablist">
+            <li role="presentation">
+              <h3><%= @user.followings_list.count %><br>
+                <small>Followers</small> </h3>
+            </li>
+            <li role="presentation">
+              <h3><%= @user.followers_list.count %><br>
+                <small>Follow</small> </h3>
+            </li>
+            <li role="presentation">
+              <h3><%= @profiles.grade %><br>
+                <small>学科</small> </h3>
+            </li>
+            <li role="presentation">
+              <h3><%= @profiles.school_class %><br>
+                <small>クラス</small> </h3>
+            </li>
+            <li role="presentation">
+              <h3><%= @profiles.number %><br>
+                <small>出席番号</small> </h3>
+            </li>
+            <li role="presentation">
+              <h3><%= @profiles.student_id %><br>
+                <small>学籍番号</small> </h3>
+            </li>
+          </ul>
+          <button class="btn btn-primary followbtn">
+            <% if current_user.id != @user.id %>
+              <% unless current_user.following?(@user) %>
+                <div class="actions ">
+                  <%= link_to 'フォロー',
+                              profile_relationships_path(@user.userid),
+                              method: :post,
+                              style: "color:#FFF;"
+                  %>
+                </div>
+              <% else %>
+                <div class="actions">
+                  <%= link_to 'フォロー解除',
+                              profile_relationship_path(@user.userid),
+                              method: :delete,
+                              style: "color:#FFF;"
+                  %>
+                </div>
+              <% end %>
+            <% end %>
+            <% if current_user.id == @user.id %>
+              <div class="actions">
+                <%= link_to '編集',
+                            edit_mypage_path,
+                            style: "color:#FFF;"
+
+                %>
+              </div>
+            <% end %>
+          </button>
         </div>
-      <% end %>
-    <% end %>
-    <% if current_user.id == @user.id %>
-      <div class="actions">
-        <%= link_to '編集',
-                    edit_mypage_path,
-                    class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
-                    style: "font-size: 18px;width: 150px;color:#FFF"
-        %>
       </div>
-    <% end %>
+        <div class="clearfix"></div>
+      </div>
+    </div>
+    <!-- /.col-md-12 -->
+    <div class="row d-flex justify-content-around center-block">
+    <div class="col-md-3 col-sm-12 w-100">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="page-header">取得資格</h3>
+          <p class="page-subtitle small"><%= @profiles.accreditation %></p>
+        </div>
+      </div>
+    </div>
+      <div class="col-md-9 col-sm-12 w-100">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="page-header">タグ、趣味</h3>
+            <p class="page-subtitle small"><%= @profiles.hobby %></p>
+          </div>
+        </div>
+      </div>
+
+          </div>
+        </div>
+      </div>
   </div>
 </div>
