メールで届く文章を日本語に翻訳

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,10 @@
-<p>Welcome <%= @email %>!</p>
+<p><%= @email %>さん、Amicaへようこそ。</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>以下のリンクからアカウントのメールアドレスを確認できます:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+-------------------------------------------
+AvailsGroup
+email : avails2022@gmail.com
+-------------------------------------------
