--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>こんにちは <%= @resource.email %>さん。</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>パスワードが変更された事をご連絡いたします。</p>
