--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,12 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>こんにちは　<%= @resource.email %>さん。</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>サインインに失敗した回数が多すぎるため、アカウントがロックされています。</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>アカウントのロックを解除するには、以下のリンクをクリックしてください:</p>
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+
+-------------------------------------------
+AvailsGroup
+email : avails2022@gmail.com
+-------------------------------------------
