--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,7 @@
 <%= javascript_pack_tag 'pages/index' %>
 <%= stylesheet_link_tag 'pages', media: 'all', 'data-turbolinks-track': 'reload' %>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
@@ -21,14 +22,19 @@
 
       <hr class="style" style="border-top:  1px solid #000000">
 
-      <form id="form1" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
-        <input id="sbox1" name="s" type="text" placeholder="友達を検索" />
-        <input id="sbtn1" type="submit" value="検索" /></form>
-
-
+      <%= form_with url: pages_path,:method => 'get',class: "container-fluid col px-0" do |f| %>
+        <p class="me-3">ユーザー検索</p>
+        <div class="input-group">
+          <%= f.text_field :name, class: "form-control mb-3",placeholder: "UserName",aria: {label:"Username",describedby: "basic-addon1"} %>
+        </div>
+      <% end %>
+      <% @result.each do |user|%>
+        <%= user.name %>
+        <%= user.nickname %>
+      <% end %>
       <button
         type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2"
+        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
         style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample1"
@@ -39,33 +45,32 @@
       <!-- /トリガーとなるリンク&ボタン -->
 
       <!-- 対象のコンテンツ -->
-      <div class="collapse show " id="collapseExample1">
-        <% @mates.each do |user| %>
-
-          <% unless current_user.is_favorite?(current_user,user) == false %>
+      <% @mates.each do |user| %>
+        <% unless current_user.is_favorite?(current_user,user) == false %>
+          <div class="collapse show mb-3" id="collapseExample1">
            <%= image_tag 'top_icon.png',class:'example1' %>
             <%= user.name %>
             <%= user.nickname %>
+            <div class="float-end mt-3">
 
-            <div class="float-end" style="border: solid 1px">
             <% if current_user.is_favorite?(current_user,user) %>
               <%= link_to page_favorite_path(user.id,current_user.id), method: :delete do %>
                 <i class="fas fa-star"></i>
-
               <% end %>
             <% else %>
               <%= link_to  page_favorite_index_path(user.id), method: :post do %>
                 <i class="far fa-star"></i>
               <% end %>
             <% end %>
+
             </div>
-          <% end %>
+          </div>
         <% end %>
-      </div>
+      <% end %>
 
       <button
         type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2"
+        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
         style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample2"
@@ -77,27 +82,28 @@
       <!-- /トリガーとなるリンク&ボタン -->
 
       <!-- 対象のコンテンツ -->
-      <div class="collapse show" id="collapseExample2" style= "border:solid 1px">
-        <% @mates.each do |user| %>　
-          <%= image_tag 'top_icon.png',class:'example1' %>　
-          <%= user.name %>
-          (<%= user.nickname %>)
-          <span style= "float: right;">
 
-          <% if current_user.is_favorite?(current_user,user) %>
-            <%= link_to page_favorite_path(user.id,current_user.id), method: :delete  do %>
-              <i class="fas fa-star"></i>
-            <% end %>
-          <% else %>
-            <%= link_to  page_favorite_index_path(user.id,),class:"text-right", method: :post do %>
-              <i class="far fa-star"></i>
-            <% end %>
-        <% end %>
-          </span>
-       <% end %>
-      </div>
+      <% @mates.each do |user| %>
+          <div class="collapse show mb-3" id="collapseExample2">
+            <%= image_tag 'top_icon.png',class:'example1' %>
+            <%= user.name %>
+            <%= user.nickname %>
+            <div class="float-end mt-3">
+
+              <% if current_user.is_favorite?(current_user,user) %>
+                <%= link_to page_favorite_path(user.id,current_user.id), method: :delete do %>
+                  <i class="fas fa-star"></i>
+                <% end %>
+              <% else %>
+                <%= link_to  page_favorite_index_path(user.id), method: :post do %>
+                  <i class="far fa-star"></i>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
+      <% end %>
     </div>
-                                                                      <!--左画面の作成ここまで-->
+      <!--左画面の作成ここまで-->
 
     <div class="col-md-6" style="background: white; height: 650px;">　
      <br>
@@ -108,13 +114,16 @@
 
       <hr class="style" style="border-top: 1px solid #000000">
 
-      <form id="form2" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
-        <input id="sbox1" id="s" name="s" type="text" placeholder="グループを検索" />
-        <input id="sbtn1" type="submit" value="検索" /></form>
+      <%= form_with url: profile_search_path,:method => 'get',class: "container-fluid col px-0" do |f| %>
+        <p class="me-3">コミュニティ検索</p>
+        <div class="input-group">
+          <%= f.text_field :name, class: "form-control mb-3",placeholder: "CommunityName",aria: {label:"Username",describedby: "basic-addon1"} %>
+        </div>
+      <% end %>
 
       <button
         type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2"
+        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
         style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample3"
@@ -133,7 +142,7 @@
 
       <button
         type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2"
+        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
         style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample3"
@@ -146,7 +155,6 @@
 
       <!-- 対象のコンテンツ -->
       <div class="collapse show" id="collapseExample4" >
-        <br>
         <%= image_tag 'top_icon.png',class:'example1' %>　
         <span>　東京卍会</span>
       </div>
