--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -33,13 +33,15 @@
     </div>
 
       <% @posts.each do |p| %>
-        <div class="my-3 p-3 bg-white rounded shadow-sm">
-          <% unless current_user.following?(@user.find(p.userid)) == false %>
-            <div id="post_<%= p.id %>">
-              <%= render "timelines/post",post:p, user:@user %>
-            </div>
-          <% end %>
-        </div>
+        <%= link_to timeline_path(p.id) do%>
+          <div class="my-3 p-3 bg-white rounded shadow-sm">
+            <% unless current_user.following?(@user.find(p.userid)) == false %>
+              <div id="post_<%= p.id %>">
+                <%= render "timelines/post",post:p, user:@user %>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
   </main>
 
