非同期の検索を完成

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -39,3 +39,8 @@ img.example1 {               /* my profileの写真サイズ */
   height: 55px;       /* ※縦横を同値に */
 }
 
+.icon{
+  border: solid 1.5px;
+  border-radius: 30%;
+}
+
