--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -8,7 +8,7 @@
         <%= image_tag "default_icon", class:"img-fluid rounded",style:"width: 150px;height: 150px;"%><br>
       <% end %>
       <h1 class="display-4 fw-normal"><%=@community.name %></h1>
-      <p class="lead fw-normal"><%=@community.content %></p>
+      <p class="lead fw-normal"><%=safe_join(@community.content.split("\n"),tag(:br)) %></p>
       <a class="btn btn-outline-dark" href="#">参加</a>
     </div>
   </div>
@@ -17,28 +17,19 @@
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white">
       <div class="my-3 py-3">
         <h2 class="display-5">参加者</h2>
-        <p class="lead">橋本環奈、本田翼</p>
+        <p class="lead" >橋本環奈、本田翼</p>
       </div>
     </div>
 
     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center">
       <div class="my-3 py-3">
         <h2 class="display-5">タグ</h2>
-        <p class="lead">#うんちぶりぶりブリムストーン</p>
+        <% @tag.each do |t| %>
+          <p class="lead mb-0">#<%= t %></p>
+        <% end %>
       </div>
     </div>
   </div>
 
-  <div class="container text-center">
-    <div class="row">
-      <div class="sol-sm"></div>
-      <div class="sol-sm">
-        <div class="">
-          <%= link_to "トップページへ戻る",communities_path,class:"btn btn-outline-dark w-auto mb-2" %>
-        </div>
-      </div>
-      <div class="sol-sm"></div>
-    </div>
-  </div>
 </main>
 
