--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,11 +1,11 @@
-<p>こんにちは <%= @resource.email %>さん。</p>
+<p>Hi!<%= @resource.email %>さん!</p>
 
-<p>誰かがあなたのパスワードを変更するためのリンクを要求しました。以下のリンクから変更する事ができます。</p>
+<p>パスワードを変更のリンクを要求されたよ!。以下のリンクから変更してね!</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>これをリクエストしなかった場合は、このメールを無視してください。</p>
-<p>上記のリンクにアクセスして新しいパスワードを作成するまで、パスワードは変更されません。</p>
+<p>※これをリクエストしなかった場合は、このメールを無視してください。</p>
+<p>※上記のリンクにアクセスして新しいパスワードを作成するまで、パスワードは変更されません。</p>
 
 -------------------------------------------
 AvailsGroup
