--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>こんにちは　<%= @resource.email %>さん。</p>
+<p>Hi!<%= @resource.email %>さん!</p>
 
-<p>サインインに失敗した回数が多すぎるため、アカウントがロックされています。</p>
+<p>サインインに失敗した回数が多すぎるから、アカウントがロックされているよ。</p>
 
-<p>アカウントのロックを解除するには、以下のリンクをクリックしてください:</p>
+<p>アカウントのロックを解除するには、以下のリンクをクリックしてネ:</p>
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
 
