--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,6 @@
-<p>Hi!<%= @resource.email %>さん!</p>
+<p>こんにちは!<%= @resource.email %>さん!</p>
 
-<p>パスワードを変更のリンクを要求されたよ!。以下のリンクから変更してね!</p>
+<p>パスワードを変更のリンクを要求されます。以下のリンクから変更してください。</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
