--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,9 +1,9 @@
-<p>Hi!<%= @email %>さん!</p>
+<p>こんにちは!<%= @email %>さん!</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>メールアドレスが<%= @resource.unconfirmed_email %>に変更されるよ!</p>
+  <p>メールアドレスが<%= @resource.unconfirmed_email %>に変更されます。</p>
 <% else %>
-  <p>メールアドレスが<%= @resource.email %>に変更されたよ!</p>
+  <p>メールアドレスが<%= @resource.email %>に変更されました。</p>
 <% end %>
 
 -------------------------------------------
